component and screens updated

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,9 @@
 $projRed:#ef4b4c;
 $projBlue: #3e619b;
 $projWhite: #fff;
+$projLightWhite: #e9e9eb;
+$projYellow: #ffdb70;
+$projBlack: #000;
 
 //font
 $fontCondensed: 'Roboto Condensed';
