loader and file upload updates

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -10,6 +10,7 @@
     background-color: m.$projLightWhite;
     padding: 20px 15px 20px 0;
     z-index: 99;
+    box-shadow: 0 2px 3px -1px rgba(0, 0, 0, 0.1);
 
     & > div:first-child {
         font-size: 30px;
