--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -11,7 +11,7 @@
             border-bottom: 1px solid m.$projBlue;
             & .modal-title {
                 font-size: 30px;
-                font-weight: bold;
+                font-family: m.$fontBold;
                 color: m.$projBlue;
             }
             & svg {
