--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -6,7 +6,6 @@
     text-align: center;
     font-size: 18px;
     border-radius: 4px;
-    font-family: m.$fontCondensed;
-    font-weight: 500;
+    font-family: m.$fontMedium;
     cursor: pointer;
 }
