--- a/src/screens/login/login.scss
+++ b/src/screens/login/login.scss
@@ -34,14 +34,13 @@
             font-size: 35px;
             text-align: center;
             padding-bottom: 10px;
-            font-weight: 700;
+            font-family: m.$fontBold;
         }
 
         & .loginTitle {
             display: flex;
             justify-content: center;
             font-size: 20px;
-            font-family: m.$fontCondensed;
             color: m.$projBlue;
             padding-bottom: 20px;
 
@@ -70,8 +69,7 @@
 
             & label {
                 font-size: 22px;
-                font-weight: 500;
-                font-family: m.$fontCondensed;
+                font-family: m.$fontBold;
                 color: m.$projBlue;
             }
 
@@ -82,16 +80,21 @@
 
             & input {
                 border: 1px solid m.$projBlue;
+
+                &::placeholder {
+                    font-family: m.$fontRegular;
+                }
+                
                 &:focus {
                     box-shadow: none;
                 }
             }
 
             & .error {
-                color: red;
+                color: m.$projRed;
                 padding: 5px 0;
-                font-weight: 500;
                 display: inline-block;
+                font-family: m.$fontBold;
             }
         }
 
