--- a/src/components/loading/loader.scss
+++ b/src/components/loading/loader.scss
@@ -4,6 +4,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: m.$projLightWhite;
+    // height: 100vh;
+    // background-color: m.$projLightWhite;
 }
