--- a/src/screens/login/login.scss
+++ b/src/screens/login/login.scss
@@ -6,8 +6,8 @@
     align-items: center;
     justify-content: center;
     background-color: #1c2e4a;
-    padding: 10px 80px;
-    height: 100vh;
+    padding: 100px 80px;
+    // height: 100vh;
 
     & > .row > div {
         padding: 0;
