--- a/src/screens/staff/staff.scss
+++ b/src/screens/staff/staff.scss
@@ -29,6 +29,13 @@
                 border-radius: 10px;
                 position: relative;
 
+                & .itemContent {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                }
+
                 & .hoverButton {
                     display: none;
                 }
@@ -169,6 +176,51 @@
                     display: block;
                     font-family: m.$fontBold;
                 }
+            }
+        }
+    }
+
+}
+
+//User profile
+#profileContainer {
+    background-color: m.$projWhite;
+    padding: 130px 0 50px;
+
+    .container {
+
+        background-color: m.$projLightWhite;
+        padding: 15px 0 30px;
+
+        h2 {
+            font-family: m.$fontBold;
+            text-align: center;
+            padding-bottom: 15px;
+        }
+    
+        h4 {
+            font-family: m.$fontMedium;
+            padding: 10px 30px 10px 0;
+            text-align: right;
+        }
+    
+        .information {
+            max-width: 600px;
+            margin: 0 auto;
+    
+            & > .row {
+                padding-bottom: 15px;
+    
+                .col {
+                    div {
+                        font-family: m.$fontRegular;
+                        font-size: 20px;
+                        padding: 10px 10px;
+                        color: m.$projBlack;
+                        background-color: m.$projWhite;
+                    }
+                }
+    
             }
         }
     }
