--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 //color
 $projRed:#ef4b4c;
 $projBlue: #3e619b;
+$projDarkBlue: #361954;
 $projWhite: #fff;
 $projLightWhite: #e9e9eb;
 $projYellow: #ffdb70;
