--- a/src/screens/staff/staff.scss
+++ b/src/screens/staff/staff.scss
@@ -2,7 +2,7 @@
 
 .staffContainer {
     background-color: m.$projBlue;
-    padding: 80px 0 50px;
+    padding: 80px 0 250px;
 }
 
 #staffHomeId {
@@ -105,10 +105,18 @@
 
 #staffMarks {
     background-color: m.$projYellow;
-    padding: 80px 0 50px;
+    padding: 170px 0 250px;
+
+    & .loader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
     & .container {
         background-color: m.$projBlue;
+        padding-bottom: 50px;
+
         & > .row {
             padding-top: 50px;
             padding-bottom: 30px;
@@ -142,10 +150,87 @@
                         }
                     }
                 }
+
+                & .editMarksButton {
+                    padding-top: 40px;
+
+                    & .buttonContainer {
+                        background-color: m.$projWhite;
+                        width: 200px;
+                        color: m.$projRed;
+                    }
+                }
             }
 
             & .marksTable {
                 padding-top: 70px;
+
+                & table {
+                    & tbody {
+                        & tr {
+                            & td {
+
+                                &:first-child {
+                                    text-transform: capitalize;
+                                }
+                                & span {
+                                    padding: 2px 5px;
+                                    border-radius: 12px;
+                                    color: #fff;
+                                    display: inline-block;
+                                    min-width: 55px;
+                                    text-align: center;
+                                }
+                                &.pass {
+                                    & span {
+                                        background-color: #0e780e;
+                                    }
+                                }
+                                &.fail {
+                                    & span {
+                                        background-color: #e31d1d;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+            & .loader {
+                max-width: 200px;
+                margin:  0 auto;
+                & .hloader {
+                    justify-content: flex-start;
+                    margin-top: 100px;
+                }
+            }
+
+            & .infoMsg, & .infoMsg2 {
+                color: m.$projYellow;
+                font-family: m.$fontBold;
+                font-size: 14px;
+                padding-top: 2px;
+            }
+
+            & .infoMsg2 {
+                font-size: 18px;
+                margin-top: 30px;
+            }
+
+            & .updateMarkWrapper {
+                padding-top: 40px;
+
+                & .buttonContainer {
+                    width: 150px;
+                    background-color: m.$projWhite;
+                    color: m.$projDarkBlue;
+
+                    &:hover {
+                        background-color: m.$projYellow;
+                        color: m.$projBlack;
+                    }
+                }
             }
         }
 
@@ -153,9 +238,16 @@
             padding: 0 30px;
             display: flex;
             justify-content: flex-end;
+            flex-direction: column;
 
             & .importBlock {
                 text-align: end;
+
+                & > div {
+                    &:last-child {
+                        margin-top: 50px;
+                    }
+                }
 
                 & .title {
                     font-size: 15px;
@@ -164,12 +256,32 @@
                     padding-bottom: 10px;
                 }
 
-                & label {
-                    background-color: m.$projYellow;
-                    padding: 5px;
-                    border-radius: 5px;
-                    cursor: pointer;
+                .actionButtonBlock {
+
+                    &.active {
+                        & label {
+                            background-color: m.$projYellow;
+                            cursor: pointer;
+                        }
+                    }
+
+                    &.disabled {
+                        & label {
+                            background-color: #a59a7c;
+                        }
+                    }
+
+                    & label {
+                        padding: 5px;
+                        border-radius: 5px;
+                         
+                        & svg {
+                            margin-bottom: 6px;
+                        }
+
+                    }
                 }
+
                 & span {
                     color: #5fff55;
                     font-size: 15px;
