ui color updates

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -16,7 +16,7 @@
         font-size: 30px;
         font-family: m.$fontMedium;
         margin-right: 15px;
-        color: m.$projBlue;
+        color: m.$projMidNitBlue;
     }
 
     & > div:last-child {
