--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,9 @@ $projWhite: #fff;
 $projLightWhite: #e9e9eb;
 $projYellow: #ffdb70;
 $projBlack: #000;
+$projGreen: #337264;
+$projGray: #42506b;
+$projMidNitBlue: #101720;
 
 //font
 $fontMedium: 'Roboto Medium';
