--- a/src/screens/staff/staff.scss
+++ b/src/screens/staff/staff.scss
@@ -1,7 +1,7 @@
 @use '../../styles/main.scss' as m;
 
 .staffContainer {
-    background-color: m.$projBlue;
+    background-color: m.$projGray;
 }
 
 #staffHomeId {
@@ -19,7 +19,7 @@
                 & .itemBlock {
                     width: 300px;
                     height: 150px;
-                    background-color: m.$projYellow;
+                    background-color: m.$projLightWhite;
                     display: flex;
                     justify-content: center;
                     align-items: flex-start;
@@ -37,6 +37,7 @@
                         flex-direction: column;
                         align-items: center;
                         justify-content: center;
+                        color: m.$projGray;
                     }
     
                     & .hoverButton {
@@ -53,7 +54,7 @@
                             justify-content: space-between;
     
                             & .button-d {
-                                background-color: m.$projBlue;
+                                background-color: m.$projGray;
                                 color: m.$projWhite;
                                 font-size: 14px;
     
@@ -71,7 +72,7 @@
             padding: 0px 0 30px;
 
                 & .itemBlock {
-                    background-color: m.$projLightWhite !important;
+                    background-color: m.$projYellow !important;
                     width: 430px !important;
     
                     
@@ -345,12 +346,13 @@
 
 //User profile
 #profileContainer {
-    background-color: m.$projDarkBlue;
+    background-color: m.$projGray;
     padding: 30px 0 50px;
 
     .container {
         background-color: m.$projLightWhite;
         padding: 15px 0 30px;
+        border-radius: 3px;
 
         h2 {
             font-family: m.$fontBold;
@@ -366,27 +368,45 @@
             justify-content: space-around;
         
             h4 {
-                font-family: m.$fontMedium;
-                padding: 10px 30px 10px 0;
+                font-family: m.$fontBold;
+                padding: 10px 15px 10px 0;
                 text-align: right;
-                color: m.$projDarkBlue;
+                color: m.$projGray;
+                font-size: 20px;
+                margin-bottom: 0;
             }
         
             .information {
 
-                border-right: 1px solid m.$projDarkBlue;
+                border-right: 1px solid m.$projGray;
                 padding-right: 60px;
 
                 & > .row {
-                    padding-bottom: 15px;
+                    padding-bottom: 8px;
+                    align-items: center;
         
                     .col {
+
+                        &:first-of-type {
+                            padding-left: 0;
+                            padding-right: 0;
+                        }
+
                         div {
                             font-family: m.$fontRegular;
-                            font-size: 20px;
-                            padding: 10px 10px;
-                            color: m.$projDarkBlue;
-                            background-color: #d1cdcd;
+                            font-size: 17px;
+                            padding: 5px 5px;
+                            color: m.$projWhite;
+                            // background-color: #d1cdcd;
+                            background-color: m.$projGray;
+                            border-radius: 3px;
+
+                            & .icon {
+                                padding-right: 6px;
+                                & svg {
+                                    fill: m.$projWhite;
+                                }
+                            }
                         }
                     }
         
@@ -414,7 +434,7 @@
                     width: 400px;
                     margin: 50px auto 0 auto;
                     padding: 40px 30px;
-                    background-color: m.$projDarkBlue;
+                    background-color: m.$projGray;
                     border-radius: 10px;
 
                     & label {
